update: database seeding

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 .oso
 .idea
-migrations
-cmake-build-*/
+tmp.db
 *.iws
 out/
-atlassian-ide-plugin.xml
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -63,7 +57,6 @@ cover/
 *.pot
 __pypackages__/
 *.iml
-out
 gen
 *.rsuser
 *.suo
@@ -72,30 +65,9 @@ gen
 *.sln.docstates
 *.userprefs
 mono_crash.*
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
-.vs/
-Generated\ Files/
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
-[Dd]ebugPS/
-[Rr]eleasePS/
-dlldata.c
 BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
