--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,41 @@
 services:
   db:
-    container_name: flask-demo-db
     image: postgres:17-alpine
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
-      - POSTGRES_DB=${DB}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=oso_cart
     volumes:
       - flask-demo-db-volume:/var/lib/postgresql/data
     ports:
       - "5444:5432"
-    networks:
-      - flask-demo-network
-    env_file:
-      - .env
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${DB_USER}"]
+      test: ["CMD", "pg_isready", "-U", "postgres"]
       interval: 1s
       timeout: 2s
       retries: 10
   oso:
-    container_name: flask-demo-oso
     build:
-      context: .
       dockerfile: Dockerfile.oso
-    env_file:
-      - .env
     volumes:
       - ./authorization:/cfg
       - ./.oso:/data
     ports:
       - "9090:8080"
-    networks:
-      - flask-demo-network
   app:
-    container_name: flask-demo-app
     build:
-      context: .
       dockerfile: Dockerfile.app
+    environment:
+      FLASK_RUN_HOST: 0.0.0.0
+      FLASK_RUN_PORT: 5000
+      FLASK_DEBUG: true
+      FLASK_ENVIRONMENT: development
+      FLASK_APP: oso_demo:create_app
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/oso_cart
+      OSO_AUTH: e_0123456789_12345_osotesttoken01xiIn
+      OSO_URL: http://oso:9090
     ports:
       - "5000:5000"
-    networks:
-      - flask-demo-network
     volumes:
       - .:/code
     depends_on:
@@ -50,6 +44,3 @@ services:
 volumes:
   flask-demo-db-volume:
     name: flask-demo-db-volume
-networks:
-  flask-demo-network:
-    driver: bridge
