--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask-cors==5.0.1
 Flask-Migrate==4.1.0
 Flask-Script==2.0.6
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 Flask==3.1.0
 gunicorn==23.0.0
 psycopg2==2.9.10
@@ -11,3 +13,5 @@ testing.postgresql==1.3.0
 oso-cloud==2.4.2
 python-dotenv==1.0.1
 bcrypt==4.3.0
+cachelib~=0.13.0
+alembic~=1.15.1
